<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starsphoto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="left"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/up"
                />

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#CC0033"
                android:textSize="55sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/down"
                />

            <TextView
                android:id="@+id/incorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#CC0033"
                android:textSize="55sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answer"
            android:textColor="#8B4513"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/frame_spinner"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/message_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D2691E"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="40sp" />


        <EditText
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:maxLength="8"
        android:textColor="#D2691E"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textSize="40sp">
            <requestFocus />
        </EditText>




</LinearLayout>

        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/check"
            android:onClick="checkButton"
            android:textStyle="bold"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="101dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:onClick="nextButton"
        android:text="@string/next"
        android:textStyle="bold" />


</LinearLayout>

